test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/compound_bitwise_xor.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  |=
  const double(2.0)
  ;
  return
  (
  int
  )
  identifier(i)
  ;
  }
